--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,24 @@ edition = "2024"
 critical-section = "1.2.0"
 cyw43 = { version = "0.2.0" }
 cyw43-pio = { version = "0.2.0", features = ["defmt"] }
+embassy-executor = { version = "0.7.0", git = "https://github.com/embassy-rs/embassy", rev = "a4f8fddd696ca2e3705827ba4b3806cbadcb3134", features = [
+    "task-arena-size-32768",
+    "arch-cortex-m",
+    "executor-thread",
+    "executor-interrupt",
+    "defmt",
+
+] }
+embassy-net = { version = "0.5.0", features = [
+    "defmt",
+    "tcp",
+    "udp",
+    "raw",
+    "dhcpv4",
+    "medium-ethernet",
+    "dns",
+] }
+embassy-net-wiznet = { version = "0.1.0", features = ["defmt"] }
 embassy-rp = { version = "0.2.0", features = [
     "rp235xb",
     "binary-info",
@@ -15,15 +33,18 @@ embassy-rp = { version = "0.2.0", features = [
     "time-driver",
     "critical-section-impl",
 ] }
-
 embassy-time = { version = "0.4.0", features = [
     "defmt",
     "defmt-timestamp-uptime",
 ] }
 smart-leds = "0.4.0"
+static_cell = "2.1"
+
 
 [patch.crates-io]
 cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "a4f8fddd696ca2e3705827ba4b3806cbadcb3134" }
 cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "a4f8fddd696ca2e3705827ba4b3806cbadcb3134" }
+embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "a4f8fddd696ca2e3705827ba4b3806cbadcb3134" }
+embassy-net-wiznet = { git = "https://github.com/embassy-rs/embassy", rev = "a4f8fddd696ca2e3705827ba4b3806cbadcb3134" }
 embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "a4f8fddd696ca2e3705827ba4b3806cbadcb3134" }
 embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "a4f8fddd696ca2e3705827ba4b3806cbadcb3134" }
