Still don't like that buzzer

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ embassy-time = { version = "0.4.0", features = [
     "defmt-timestamp-uptime",
 ] }
 fixed = "1.28.0"
+libm = "0.2.11"
 smart-leds = "0.4.0"
 static_cell = "2.1"
 
