--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+byte-slice-cast = { version = "1.2.2", default-features = false }
 critical-section = "1.2.0"
 cyw43 = { version = "0.2.0" }
 cyw43-pio = { version = "0.2.0", features = ["defmt"] }
@@ -33,10 +34,12 @@ embassy-rp = { version = "0.2.0", features = [
     "time-driver",
     "critical-section-impl",
 ] }
+embassy-sync = { version = "0.6.0", features = ["defmt"] }
 embassy-time = { version = "0.4.0", features = [
     "defmt",
     "defmt-timestamp-uptime",
 ] }
+
 fixed = "1.28.0"
 libm = "0.2.11"
 smart-leds = "0.4.0"
@@ -46,7 +49,9 @@ static_cell = "2.1"
 [patch.crates-io]
 cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "a4f8fddd696ca2e3705827ba4b3806cbadcb3134" }
 cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "a4f8fddd696ca2e3705827ba4b3806cbadcb3134" }
+embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "a4f8fddd696ca2e3705827ba4b3806cbadcb3134" }
 embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "a4f8fddd696ca2e3705827ba4b3806cbadcb3134" }
 embassy-net-wiznet = { git = "https://github.com/embassy-rs/embassy", rev = "a4f8fddd696ca2e3705827ba4b3806cbadcb3134" }
 embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "a4f8fddd696ca2e3705827ba4b3806cbadcb3134" }
+embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "a4f8fddd696ca2e3705827ba4b3806cbadcb3134" }
 embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "a4f8fddd696ca2e3705827ba4b3806cbadcb3134" }
