--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ embassy-time = { version = "0.4.0", features = [
     "defmt",
     "defmt-timestamp-uptime",
 ] }
+embedded-graphics = "0.8.1"
 
 fixed = "1.28.0"
 libm = "0.2.11"
